--- a/app/views/profiles/_form.html.erb
+++ b/app/views/profiles/_form.html.erb
@@ -13,6 +13,7 @@
 
   <div class="field">
     <%= f.label :user_id %><br>
+		<%= @profile.User.Email %>
     <%= f.text_field :user_id %>
   </div>
   <div class="field">
