--- a/app/views/profiles/edit.html.erb
+++ b/app/views/profiles/edit.html.erb
@@ -2,5 +2,9 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @profile %> |
-<%= link_to 'Back', profiles_path %>
+
+	<%= button_to 'Show', @profile, :class => 'btn btn-primary pull-left' %> 
+
+		<%= button_to 'Back', profiles_path, :class => 'btn btn-danger pull-right' %>
+</div>
+  </div>
