--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -57,7 +57,7 @@
 <% end %>
 	
 	<!-- Begin page content -->
-    <div class="container">
+    <div class="container container-fluid">
       <!-- <div class="page-header">
         <h1>Titulo</h1>
       </div>    -->
