--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@product) do |f| %>
+<%= form_for @product, :html => { :multipart => true }  do |f|%>
   <% if @product.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@product.errors.count, "error") %> prohibited this product from being saved:</h2>
@@ -19,14 +19,14 @@
     <%= f.label :Description %><br>
     <%= f.text_field :Description %>
   </div>
-  <div class="field">
-    <%= f.label :Img_url %><br>
-    <%= f.text_field :Img_url %>
-  </div>
+  <!--<div class="field">     <%= f.label :Img_url %><br>     <%= f.text_field :Img_url %>   </div>-->
   <div class="field">
     <%= f.label :Price %><br>
     <%= f.text_field :Price %>
   </div>
+	<div class="field">
+		<%= f.file_field :Img_url %>
+	</div>
   <div class="field">
     <%= f.label :Category_id %><br>
 		<%= f.select(:Category_id, Category.all.collect {|p| [ p.Name, p.id ] }, {include_blank: 'Select One', :selected => @product.Category_id }) %>
