--- a/app/views/products/edit.html.erb
+++ b/app/views/products/edit.html.erb
@@ -1,6 +1,9 @@
 <h1>Editing product</h1>
 
 <%= render 'form' %>
-
-<%= link_to 'Show', @product %> |
-<%= link_to 'Back', products_path %>
+<div class="col-xs-2">
+	<%= button_to 'Show', @product, :class => 'btn btn-primary' %> 
+	</div>
+	<div class="col-xs-2">
+		<%= button_to 'Back', products_path, :class => 'btn btn-danger' %>
+	</div>
