--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -12,6 +12,8 @@
 
 <p>
   <strong>Img url:</strong>
+	<%= image_tag @product.Img_url.url %>
+	
   <%= @product.Img_url %>
 </p>
 
@@ -22,10 +24,13 @@
 
 <p>
   <strong>Category:</strong>
-	<%= @CategoryName %>
-	<%= @product.Category.any? %>
-	
+	<%= @CategoryName %>	
 </p>
+
+
+<% # jquery upload template # %>
+<script id="template-upload" type="text/x-tmpl"><div class="upload">{%=o.name%}<div class="progress"><div class="bar" style="width: 0%"></div></div></div></script>
+
 
 <%= link_to 'Edit', edit_product_path(@product) %> |
 <%= link_to 'Back', products_path %>
