--- a/app/views/profiles/_form.html.erb
+++ b/app/views/profiles/_form.html.erb
@@ -11,28 +11,35 @@
     </div>
   <% end %>
 
-  <div class="field">
-    <%= f.label :user_id %><br>
-		<%= @profile.User.Email %>
-    <%= f.text_field :user_id %>
+
+
+<div class="form-group">
+	<%= f.label :user_id %>
+	<%= f.label @profile.user.email %>
+</div>
+<div class="form-group">
+	<%= f.label :name %><br>
+    <%= f.text_field :name, :class => 'form-control' %>
+</div>
+<div class="form-group">
+	 <%= f.label :address %><br>
+    <%= f.text_field :address, :class => 'form-control' %>
+</div>
+<div class="form-group">
+	 <%= f.label :phone %><br>
+    <%= f.text_field :phone, :class => 'form-control' %>
+</div>
+<div class="form-inline">
+	 <%= f.label :dob %><br>
+    <%= f.date_select :dob,
+			 {:order => [:day, :month, :year], :start_year => 1920, :end_year => 2013},
+{:class => "form-control"} %>
+</div>
+<div class="row">
+	<div class="col-xs-12" style="height:10px;"></div>
   </div>
-  <div class="field">
-    <%= f.label :name %><br>
-    <%= f.text_field :name %>
-  </div>
-  <div class="field">
-    <%= f.label :address %><br>
-    <%= f.text_field :address %>
-  </div>
-  <div class="field">
-    <%= f.label :phone %><br>
-    <%= f.text_field :phone %>
-  </div>
-  <div class="field">
-    <%= f.label :dob %><br>
-    <%= f.date_select :dob %>
-  </div>
-  <div class="actions">
-    <%= f.submit %>
-  </div>
+	<%= f.submit 'Save', :class => 'btn btn-success pull-left' %>
+		
+    
+  
 <% end %>
