--- a/app/views/products/edit.html.erb
+++ b/app/views/products/edit.html.erb
@@ -1,9 +1,12 @@
 <h1>Editing product</h1>
 
 <%= render 'form' %>
-<div class="col-xs-2">
+<!-- <div class="col-xs-2">
 	<%= button_to 'Show', @product, :class => 'btn btn-primary' %> 
 	</div>
 	<div class="col-xs-2">
 		<%= button_to 'Back', products_path, :class => 'btn btn-danger' %>
-	</div>
+	</div> -->
+<%= link_to 'Show', @product, { :style=>'color:#FFFFFF; margin-left:15px;', :class => 'btn btn-primary pull-left' } %>
+
+<%= button_to 'Back', products_path, :class => 'btn btn-danger pull-right', :method => :get %>
