--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,14 +1,14 @@
 <h1>Listing products</h1>
 
-<table>
+<table class="table table-hover table-striped table-bordered">
   <thead>
     <tr>
       <th>Name</th>
       <th>Description</th>
-      <th>Img url</th>
+      <!-- <th>Img url</th> -->
       <th>Price</th>
       <th>Category</th>
-      <th colspan="3"></th>
+      <th colspan="3">Actions</th>
     </tr>
   </thead>
 
@@ -17,9 +17,9 @@
       <tr>
         <td><%= product.Name %></td>
         <td><%= product.Description %></td>
-        <td><%= product.Img_url %></td>
+        <!-- <td><%= product.Img_url %></td> -->
         <td><%= product.Price %></td>
-        <td><%= product.Category %></td>
+				<td><%= product.Category.Name %></td>
         <td><%= link_to 'Show', product %></td>
         <td><%= link_to 'Edit', edit_product_path(product) %></td>
         <td><%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' } %></td>
@@ -30,4 +30,4 @@
 
 <br>
 
-<%= link_to 'New Product', new_product_path %>
+<%= link_to 'New Product', new_product_path, :class => 'btn btn-default' %>
