--- a/app/views/cart/success.html.erb
+++ b/app/views/cart/success.html.erb
@@ -1,4 +1,4 @@
-<h1>PRUSIC</h1>
+<h1>Cart</h1>
 <fieldset id="fieldCart"><legend></legend>
   <div id="Container" class="panel panel-default">
     <div id="divGroups" class="panel-body">
