--- a/app/views/orders/allorders.html.erb
+++ b/app/views/orders/allorders.html.erb
@@ -1,4 +1,4 @@
-<h1>My Orders</h1>
+<h1>All Orders</h1>
 
 <table class="table table-hover table-condensed table-striped">
   <thead>
@@ -12,14 +12,15 @@
   <tbody>
     <% @orders.each do |order| %>
       <tr>
-        <td><!-- <%= order.user.email %> -->
+				<td> <%= order.user.email %> </td>
+        <td>
 					<%= order.created_at.strftime('%v') %>
 				</td>
         <td><%= number_to_currency(order.total, :unit => "€ ") %></td>
 				<td><a href="/my_orders/detail/<%= order.id %>">Show</a></td>
         <!-- <td><%= link_to 'Show', order %></td> -->
         <!-- <td>= link_to 'Edit', edit_order_path(order) </td> -->
-        <td><!-- <%= link_to 'Destroy', order, method: :delete, data: { confirm: 'Are you sure?' } %> --></td>
+        <!-- <td><%= link_to 'Destroy', order, method: :delete, data: { confirm: 'Are you sure?' } %></td> -->
       </tr>
     <% end %>
   </tbody>
