--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -32,5 +32,5 @@
 <script id="template-upload" type="text/x-tmpl"><div class="upload">{%=o.name%}<div class="progress"><div class="bar" style="width: 0%"></div></div></div></script>
 
 
-<%= link_to 'Edit', edit_product_path(@product) %> |
-<%= link_to 'Back', products_path %>
+<%= link_to 'Edit', edit_product_path(@product), :class => 'btn btn-primary pull-left', :style => 'color: #FFFFFF' %> 
+<%= link_to 'Back', products_path, :class => 'btn btn-danger pull-left', :style => 'color: #FFFFFF'%>
