--- a/app/views/profiles/new.html.erb
+++ b/app/views/profiles/new.html.erb
@@ -2,4 +2,4 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Back', profiles_path %>
+<%= link_to 'Back', '/myprofile', :class => 'btn btn-danger pull-left', :style => 'color: #FFFFFF'  %>
